Adds some more marquees, why not

--- a/style.css
+++ b/style.css
@@ -140,3 +140,15 @@ img {
   font-size: 18px;
   text-transform: uppercase;
 }
+
+.diag {
+  width: 150vw;
+  position: fixed !important;
+  transform-origin: 100% 0%;
+  top: 0;
+  right: 0;
+  transform: rotate(-45deg);
+  z-index: 99;
+  background: #CDE8FC;
+  border-top: 1px solid black;
+}
